added tests for CaloriesController
